--- a/templates/gm-deck.hbs
+++ b/templates/gm-deck.hbs
@@ -1,8 +1,8 @@
 <div class="gm-deck-container">
   {{!-- Quick Actions Bar --}}
   <div class="gm-deck-actions">
-    <button class="gm-deck-action-btn" data-action="create-cutin" title="Create Cinematic Cutin">
-      <i class="fas fa-film"></i> New Cutin
+    <button class="gm-deck-action-btn" data-action="create-cutin" title="Create Cinematic Cut-in">
+      <i class="fas fa-film"></i> New Cut-in
     </button>
   </div>
 
@@ -66,7 +66,7 @@
     {{#if hasCutins}}
     <div class="gm-deck-section">
       <div class="gm-deck-section-header">
-        <i class="fas fa-film"></i> Cinematic Cutins
+        <i class="fas fa-film"></i> Cinematic Cut-ins
       </div>
       <div class="gm-deck-items">
         {{#each cutinItems}}
