--- a/templates/cutin-config.hbs
+++ b/templates/cutin-config.hbs
@@ -122,6 +122,12 @@
               <input type="color" name="textLayer.{{index}}.color" value="{{color}}" />
             </div>
           </div>
+          <div class="text-layer-field-row">
+            <div class="text-layer-field">
+              <label>Line Height</label>
+              <input type="number" name="textLayer.{{index}}.lineHeight" value="{{#if lineHeight}}{{lineHeight}}{{else}}1.0{{/if}}" min="0.5" max="5.0" step="0.1" />
+            </div>
+          </div>
           <div class="text-layer-field">
             <label>Position</label>
             <select name="textLayer.{{index}}.position">
