--- a/templates/cutin-overlay.hbs
+++ b/templates/cutin-overlay.hbs
@@ -12,7 +12,7 @@
   <div class="cutin-text-layers">
     {{#each textLayers}}
     <div class="cutin-text text-{{position}} {{#if hasBackground}}has-bg{{/if}}"
-         style="font-family: {{font}}; font-size: {{size}}px; color: {{color}};{{#if hasBackground}} background: {{#if backgroundColor}}{{backgroundColor}}{{else}}rgba(0, 0, 0, 0.7){{/if}};{{/if}} --offset-x: {{#if offsetX}}{{offsetX}}{{else}}0{{/if}}px; --offset-y: {{#if offsetY}}{{offsetY}}{{else}}0{{/if}}px;">
+         style="font-family: {{font}}; font-size: {{size}}px; color: {{color}}; line-height: {{#if lineHeight}}{{lineHeight}}{{else}}1.0{{/if}};{{#if hasBackground}} background: {{#if backgroundColor}}{{backgroundColor}}{{else}}rgba(0, 0, 0, 0.7){{/if}};{{/if}} --offset-x: {{#if offsetX}}{{offsetX}}{{else}}0{{/if}}px; --offset-y: {{#if offsetY}}{{offsetY}}{{else}}0{{/if}}px;">
       {{{text}}}
     </div>
     {{/each}}
